--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: lightorange;
+    background-color: #DDDDAA;
     margin-top: 75px;
 }
 
